; ModuleID = '/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_server.c_cmd_timeout.c'
source_filename = "/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_server.c_cmd_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.skynet_context = type { i8*, i32 }

@.str = private unnamed_addr constant [3 x i8] c"%d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.skynet_context*, i8*)* @cmd_timeout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @cmd_timeout(%struct.skynet_context* %0, i8* %1) #0 {
  %3 = alloca %struct.skynet_context*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.skynet_context* %0, %struct.skynet_context** %3, align 8
  store i8* %1, i8** %4, align 8
  store i8* null, i8** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @strtol(i8* %8, i8** %5, i32 10)
  store i32 %9, i32* %6, align 4
  %10 = load %struct.skynet_context*, %struct.skynet_context** %3, align 8
  %11 = call i32 @skynet_context_newsession(%struct.skynet_context* %10)
  store i32 %11, i32* %7, align 4
  %12 = load %struct.skynet_context*, %struct.skynet_context** %3, align 8
  %13 = getelementptr inbounds %struct.skynet_context, %struct.skynet_context* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 8
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* %7, align 4
  %17 = call i32 @skynet_timeout(i32 %14, i32 %15, i32 %16)
  %18 = load %struct.skynet_context*, %struct.skynet_context** %3, align 8
  %19 = getelementptr inbounds %struct.skynet_context, %struct.skynet_context* %18, i32 0, i32 0
  %20 = load i8*, i8** %19, align 8
  %21 = load i32, i32* %7, align 4
  %22 = call i32 @sprintf(i8* %20, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %21)
  %23 = load %struct.skynet_context*, %struct.skynet_context** %3, align 8
  %24 = getelementptr inbounds %struct.skynet_context, %struct.skynet_context* %23, i32 0, i32 0
  %25 = load i8*, i8** %24, align 8
  ret i8* %25
}

declare dso_local i32 @strtol(i8*, i8**, i32) #1

declare dso_local i32 @skynet_context_newsession(%struct.skynet_context*) #1

declare dso_local i32 @skynet_timeout(i32, i32, i32) #1

declare dso_local i32 @sprintf(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
